--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ng-ssr",
+            "outputPath": "dist/ng-ssr/browser",
             "index": "projects/ng-ssr/src/index.html",
             "main": "projects/ng-ssr/src/main.ts",
             "polyfills": "projects/ng-ssr/src/polyfills.ts",
@@ -32,7 +32,7 @@
               {
                 "input": "projects/ng-ssr/src/theme.scss",
                 "inject": false,
-                "bundleName": "theme.css"
+                "bundleName": "theme"
               }
             ],
             "scripts": []
@@ -105,6 +105,65 @@
             ],
             "scripts": []
           }
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "dist/ng-ssr/server",
+            "main": "projects/ng-ssr/server.ts",
+            "tsConfig": "projects/ng-ssr/tsconfig.server.json",
+            "inlineStyleLanguage": "scss"
+          },
+          "configurations": {
+            "production": {
+              "outputHashing": "media",
+              "fileReplacements": [
+                {
+                  "replace": "projects/ng-ssr/src/environments/environment.ts",
+                  "with": "projects/ng-ssr/src/environments/environment.prod.ts"
+                }
+              ]
+            },
+            "development": {
+              "optimization": false,
+              "sourceMap": true,
+              "extractLicenses": false
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve-ssr": {
+          "builder": "@nguniversal/builders:ssr-dev-server",
+          "configurations": {
+            "development": {
+              "browserTarget": "ng-ssr:build:development",
+              "serverTarget": "ng-ssr:server:development"
+            },
+            "production": {
+              "browserTarget": "ng-ssr:build:production",
+              "serverTarget": "ng-ssr:server:production"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "prerender": {
+          "builder": "@nguniversal/builders:prerender",
+          "options": {
+            "routes": [
+              "/"
+            ]
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "ng-ssr:build:production",
+              "serverTarget": "ng-ssr:server:production"
+            },
+            "development": {
+              "browserTarget": "ng-ssr:build:development",
+              "serverTarget": "ng-ssr:server:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
